Moved  multiple occurrences of hard coded styles in Regions to style.css

--- a/res/style.css
+++ b/res/style.css
@@ -5,3 +5,24 @@
     -fx-background-color: #284376;
     -fx-alignment: "center";
 }
+
+.scroll-pane {
+    -fx-padding: 5 5 5 5;
+    -fx-background: #B0C4DE;
+    -fx-background-radius: 5;
+    -fx-hbar-policy: "never";
+}
+
+.label {
+    -fx-font-family: 'Trebuchet MS';
+    -fx-font-size: 20;
+    -fx-text-fill: 'white';
+}
+
+.vbox {
+    -fx-background: lightsteelblue;
+    -fx-background-radius: 5;
+    -fx-background-color: lightsteelblue;
+    -fx-pref-width: 100;
+    -fx-pref-height: 350;
+}
