Added a res root specific to Player module, moved title styling to style.css

--- a/classes/production/player/style.css
+++ b/classes/production/player/style.css
@@ -19,6 +19,10 @@
     -fx-text-fill: 'white';
 }
 
+#titleLabel {
+    -fx-font-size: 50;
+}
+
 .vbox {
     -fx-background: lightsteelblue;
     -fx-background-radius: 5;
