--- a/res/authoring.css
+++ b/res/authoring.css
@@ -1,4 +1,24 @@
+.bank-image-text{
+    -fx-text-fill: white;
+    -fx-text-inner-color: white;
+}
+
+.bank-row{
+    -fx-alignment: CENTER;
+    -fx-padding: 5;
+    -fx-spacing: 10;
+}
+
+.properties-button{
+    -fx-pref-width: 125;
+    -fx-pref-height: 18;
+    -fx-padding: 5;
+    -fx-translate-x: 20;
+    -fx-spacing: 5;
+}
+
 .properties-label{
+    -fx-alignment: CENTER_RIGHT;
     -fx-text-fill: white;
     -fx-font-size: 20;
     -fx-padding: 8;
@@ -12,9 +32,10 @@
 }
 
 .properties-scrollpane{
-    -fx-pref-height: 250;
+    -fx-pref-height: 220;
     -fx-pref-width: 300;
     -fx-spacing: 5;
+    -fx-vgap: 5;
 }
 
 .scroll-pane {
