Updated .gitignore to stop tracking .iml again

--- a/src/Player/res/style.css
+++ b/src/Player/res/style.css
@@ -57,6 +57,13 @@
     -fx-spacing: 10;
 }
 
+#options {
+    -fx-background-radius: 5;
+    -fx-pref-width: 300;
+    -fx-pref-height: 350;
+    -fx-alignment: center;
+}
+
 .button {
     -fx-pref-width: 100;
     -fx-pref-height: 50;
