--- a/res/properties_pane_fxml/styles/sceneprops.css
+++ b/res/properties_pane_fxml/styles/sceneprops.css
@@ -5,7 +5,7 @@
 }
 .propertyValue {
     -fx-max-width: 125px;
-    -fx-padding: 5 5 5 15;
+    -fx-padding: 5 15 5 15;
     -fx-text-fill: white;
     -fx-background-radius: 100px;
     -fx-background-color: black;
@@ -16,4 +16,8 @@
 
 .propertyValue:focused {
     -fx-effect: dropshadow(three-pass-box, rgba(255,255,255,0.8), 10, 0, 0, 0);
+}
+
+.propertyValue:disabled {
+    -fx-background-color: #555555;
 }
