Image, audio and colour resources' properties also change now. (For real)

--- a/res/properties_pane_fxml/resprops.fxml
+++ b/res/properties_pane_fxml/resprops.fxml
@@ -23,6 +23,7 @@
            styleClass="propertyName"/>
 
     <TextField styleClass="propertyValue" fx:id="resourceIDField"
+               onKeyPressed="#resourceIDKeyPressed"
                GridPane.columnIndex="1" GridPane.rowIndex="1"/>
 
     <Label text="src" styleClass="propertyName"
