--- a/res/properties_pane_fxml/sceneprops.fxml
+++ b/res/properties_pane_fxml/sceneprops.fxml
@@ -33,7 +33,7 @@
                onKeyPressed="#bgColorKeyPressed"
                    GridPane.columnIndex="1" GridPane.rowIndex="2"/>
 
-    <Label text="bgImg" styleClass="propertyName"
+    <Label text="bgImage" styleClass="propertyName"
            GridPane.columnIndex="0" GridPane.rowIndex="3"/>
 
     <TextField fx:id="bgImgField" styleClass="propertyValue"
