--- a/res/GameCenter.css
+++ b/res/GameCenter.css
@@ -18,8 +18,12 @@
 
 .thumbPane {
     -fx-background: #333333;
+    -fx-background-color: #333333;
     -fx-border-color: transparent;
-    -fx-background-color: #33333300;
+    -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.5), 10, 0, 0, 0);
+    -fx-vbar-policy: never;
+    -fx-hbar-policy: never;
+    -fx-background-radius: 15 15 15 15;
 }
 
 .leftPane {
