When a thumbnail is clicked, the description Pane changes

--- a/res/GameCenter.css
+++ b/res/GameCenter.css
@@ -6,6 +6,10 @@
     -fx-background-color: #808080;
 }
 
+.thumbnail {
+
+}
+
 .paneText {
     -fx-fill: #DDDDDD;
     -fx-font-size: 25;
@@ -22,6 +26,14 @@
     -fx-border-color: transparent;
     -fx-vbar-policy: never;
     -fx-hbar-policy: never;
+}
+
+.descriptionPane {
+    -fx-background-color: #333333;
+    -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.5), 10, 0, 0, 0);
+    -fx-border-radius: 15 15 15 15;
+    -fx-background-radius: 15 15 15 15;
+    -fx-alignment: center;
 }
 
 .leftPane {
@@ -56,4 +68,14 @@
     -fx-background-color: #ffffff;
     -fx-border-radius: 5 5 5 5;
     -fx-background-radius: 5 5 5 5;
+}
+
+.button {
+    -fx-background-color: ghostwhite;
+    -fx-text-alignment: center;
+    -fx-text-fill: #333333;
+    -fx-font-size: 20;
+    -fx-effect: dropshadow(three-pass-box, lightgray, 10, 0, 0, 0);
+    -fx-background-radius: 20 20 20 20;
+    -fx-cursor: hand;
 }
