--- a/classes/production/voogasalad_crackingopen/GameCenter.fxml
+++ b/classes/production/voogasalad_crackingopen/GameCenter.fxml
@@ -1,53 +1,68 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.text.Text?>
 <?import java.net.URL?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.paint.RadialGradient?>
+<?import javafx.scene.paint.Stop?>
+<?import javafx.scene.shape.Circle?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="GameCenter.GameCenterController"
-            prefWidth="975.0" prefHeight="500.0"
-            id="parentPane">
+<AnchorPane id="parentPane" prefHeight="486.0" prefWidth="963.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GameCenter.GameCenterController">
 
-    <padding><Insets top="25" right="25" bottom="25" left="25"/></padding>
+    <padding><Insets bottom="25" left="25" right="25" top="25" /></padding>
 
-    <stylesheets><URL value="@GameCenter.css"/></stylesheets>
+    <stylesheets><URL value="@GameCenter.css" /></stylesheets>
 
-    <!-- Title pane and corresponding text -->
-    <HBox   styleClass="centerPane"
-            layoutX="250" layoutY="25">
-        <padding><Insets top="5" right="5" bottom="5" left="5"/></padding>
-        <Text   styleClass="paneText"
-                fx:id="titleText"
-                text="Game Center"/>
+    <!-- Description Pane -->
+    <Pane fx:id="descriptionPane" layoutX="250" layoutY="85" prefHeight="390" prefWidth="425" styleClass="descriptionPane">
+        <Button fx:id="newGameButton" layoutX="114.0" layoutY="173.0" styleClass="button" text="Create a new game">
+        </Button>
+    </Pane>
+
+    <!-- Thumbnail Pane -->
+    <Pane layoutX="700" layoutY="25" prefHeight="450" prefWidth="250" styleClass="centerPane">
+        <ScrollPane fx:id="thumbPane" layoutX="10" layoutY="10" prefHeight="430" prefWidth="230" styleClass="thumbPane">
+            <VBox fx:id="thumbPaneContent" spacing="25">
+            </VBox>
+        </ScrollPane>
+    </Pane>
+
+    <!-- Social Pane -->
+    <Pane fx:id="socialPane" layoutX="25" layoutY="85.0" prefHeight="390.0" prefWidth="200" styleClass="centerPane" />
+
+    <!-- Username Box -->
+    <HBox alignment="CENTER_LEFT" layoutX="25.0" layoutY="25.0" prefHeight="44.0" prefWidth="200.0" styleClass="centerPane">
+      <children>
+         <Circle radius="22.0" stroke="BLACK" strokeType="INSIDE">
+            <fill>
+               <RadialGradient centerX="0.5" centerY="0.5" radius="0.5">
+                  <stops>
+                     <Stop color="BLACK" />
+                     <Stop color="WHITE" offset="1.0" />
+                  </stops>
+               </RadialGradient>
+            </fill>
+         </Circle>
+         <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="paneText" text="username" textAlignment="CENTER" wrappingWidth="150.0">
+            <font>
+               <Font size="25.0" />
+            </font>
+         </Text>
+      </children></HBox>
+
+    <!-- Title pane -->
+    <HBox alignment="CENTER" layoutX="250.0" layoutY="25.0" styleClass="centerPane">
+        <padding>
+         <Insets bottom="5" left="5" right="5" top="5" />
+      </padding>
+        <Text fx:id="titleText" styleClass="paneText" text="Game Center" />
     </HBox>
-
-
-    <Pane   styleClass="centerPane"
-            fx:id="descriptionPane"
-            layoutX="250" layoutY="85"
-            prefWidth="425" prefHeight="390">
-    </Pane>
-
-    <ScrollPane   styleClass="thumbPane"
-            fx:id="thumbPane"
-            layoutX="700" layoutY="25"
-            prefWidth="250" prefHeight="450">
-        <VBox   fx:id="thumbPaneContent"
-                spacing="20">
-        </VBox>
-    </ScrollPane>
-
-    <Pane   styleClass="centerPane"
-            fx:id="socialPane"
-            layoutX="25" layoutY="25"
-            prefWidth="200" prefHeight="450">
-    </Pane>
 
 </AnchorPane>
