--- a/res/GameCenter.css
+++ b/res/GameCenter.css
@@ -29,8 +29,7 @@
 }
 
 .descriptionPane {
-    -fx-background-color: #333333;
-    -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.5), 10, 0, 0, 0);
+    -fx-background-color: transparent;
     -fx-border-radius: 15 15 15 15;
     -fx-background-radius: 15 15 15 15;
     -fx-alignment: center;
