--- a/classes/production/voogasalad_crackingopen/GameCenter.fxml
+++ b/classes/production/voogasalad_crackingopen/GameCenter.fxml
@@ -15,7 +15,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane id="parentPane" prefHeight="486.0" prefWidth="963.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GameCenter.GameCenterController">
+<AnchorPane id="parentPane" prefHeight="486.0" prefWidth="963.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gameCenter.main.GameCenterController">
 
     <padding><Insets bottom="25" left="25" right="25" top="25" /></padding>
 
