--- a/res/gameCenter/GameCenter.fxml
+++ b/res/gameCenter/GameCenter.fxml
@@ -79,10 +79,14 @@
                 </VBox>
                 <Button fx:id="editButton" layoutX="85.0" layoutY="264.0" mnemonicParsing="false" text="Edit" />
                 <Button fx:id="playButton" layoutX="181.0" layoutY="264.0" mnemonicParsing="false" onAction="#launchPlayer" text="Play" />
-                <Button fx:id="rateButton" layoutX="277.0" layoutY="264.0" mnemonicParsing="false" text="Rate" />
+                <Button fx:id="rateButton" layoutX="277.0" layoutY="264.0" mnemonicParsing="false" onAction="#rateGame" text="Rate" />
             </children>
          </Pane>
-         <Pane prefHeight="390.0" prefWidth="425.0" styleClass="centerPane" />
+         <Pane fx:id="ratingPane" prefHeight="390.0" prefWidth="425.0" styleClass="centerPane" visible="false">
+             <children >
+                 <Rating fx:id="ratingBar"/>
+             </children>
+         </Pane>
       </children>
    </StackPane>
 
