--- a/res/network_fxml/identitypane.fxml
+++ b/res/network_fxml/identitypane.fxml
@@ -7,9 +7,39 @@
 <?import javafx.scene.layout.*?>
 
 <?import javafx.scene.text.Text?>
-<GridPane xmlns="http://javafx.com/javafx"
-          xmlns:fx="http://javafx.com/fxml"
-          fx:controller="network_account.IdentityController"
-          prefHeight="400.0" prefWidth="600.0">
-    <Text text="This is a test"></Text>
-</GridPane>
+<?import java.net.URL?>
+<?import javafx.scene.image.ImageView?>
+<BorderPane xmlns="http://javafx.com/javafx"
+            xmlns:fx="http://javafx.com/fxml"
+            fx:controller="network_account.IdentityController"
+            prefHeight="600.0" prefWidth="300.0" styleClass="borderPane">
+    <center>
+        <GridPane alignment="center" hgap="25" vgap="10"
+                   prefWidth="300" prefHeight="600" styleClass="gridPane">
+            <columnConstraints>
+                <ColumnConstraints percentWidth="50"  />
+                <ColumnConstraints percentWidth="50" />
+            </columnConstraints>
+
+            <Label fx:id="usernameLabel" text="Username: " GridPane.rowIndex="0" GridPane.columnIndex="0" styleClass="usernameLabel"/>
+            <Label fx:id="usernameText" text=" " GridPane.rowIndex="0" GridPane.columnIndex="1" styleClass="usernameLabel" onKeyPressed="#setUsername"/>
+
+            <Label fx:id="avatarLabel" text="Avatar: " GridPane.rowIndex="5" GridPane.columnIndex="0" styleClass="usernameLabel"/>
+            <ImageView fx:id="avatarImageView" GridPane.rowIndex="6" GridPane.columnIndex="1" onKeyPressed="#setAvatar"/>
+
+            <Label fx:id="highScoresLabel" text="High Scores: " GridPane.rowIndex="19" GridPane.columnIndex="0" styleClass="usernameLabel"/>
+            <GridPane fx:id="highScoresPane" alignment="center" hgap="10" vgap="10" GridPane.columnIndex="0" GridPane.rowIndex="20" styleClass="innerGridPane">
+                <Label fx:id="score1Label" text="1st: " styleClass="usernameLabel" GridPane.rowIndex="0" GridPane.columnIndex="0"/>
+                <Label fx:id="score2Label" text="2nd: " styleClass="usernameLabel" GridPane.rowIndex="1" GridPane.columnIndex="0"/>
+                <Label fx:id="score3Label" text="3rd: " styleClass="usernameLabel" GridPane.rowIndex="2" GridPane.columnIndex="0"/>
+
+                <Label fx:id="score1" text=" " styleClass="usernameLabel" GridPane.rowIndex="0" GridPane.columnIndex="1" onKeyPressed="#updateHighScores"/>
+                <Label fx:id="score2" text=" " styleClass="usernameLabel" GridPane.rowIndex="1" GridPane.columnIndex="1" onKeyPressed="#updateHighScores"/>
+                <Label fx:id="score3" text=" " styleClass="usernameLabel" GridPane.rowIndex="2" GridPane.columnIndex="1" onKeyPressed="#updateHighScores"/>
+            </GridPane>
+        </GridPane>
+    </center>
+    <stylesheets>
+        <URL value="@styles/identitystyle.css" />
+    </stylesheets>
+</BorderPane>
