--- a/res/network_fxml/identitypane.fxml
+++ b/res/network_fxml/identitypane.fxml
@@ -22,10 +22,10 @@
             </columnConstraints>
 
             <Label fx:id="usernameLabel" text="Username: " GridPane.rowIndex="0" GridPane.columnIndex="0" styleClass="usernameLabel"/>
-            <Label fx:id="usernameText" text=" " GridPane.rowIndex="0" GridPane.columnIndex="1" styleClass="usernameLabel" onKeyPressed="#setUsername"/>
+            <Label fx:id="usernameText" text=" " GridPane.rowIndex="0" GridPane.columnIndex="1" styleClass="usernameLabel" onKeyPressed="#updateSocial"/>
 
             <Label fx:id="avatarLabel" text="Avatar: " GridPane.rowIndex="5" GridPane.columnIndex="0" styleClass="usernameLabel"/>
-            <ImageView fx:id="avatarImageView" GridPane.rowIndex="6" GridPane.columnIndex="1" onKeyPressed="#setAvatar"/>
+            <ImageView fx:id="avatarImageView" GridPane.rowIndex="6" GridPane.columnIndex="1" onKeyPressed="#updateSocial"/>
 
             <Label fx:id="highScoresLabel" text="High Scores: " GridPane.rowIndex="19" GridPane.columnIndex="0" styleClass="usernameLabel"/>
             <GridPane fx:id="highScoresPane" alignment="center" hgap="10" vgap="10" GridPane.columnIndex="0" GridPane.rowIndex="20" styleClass="innerGridPane">
@@ -33,9 +33,9 @@
                 <Label fx:id="score2Label" text="2nd: " styleClass="usernameLabel" GridPane.rowIndex="1" GridPane.columnIndex="0"/>
                 <Label fx:id="score3Label" text="3rd: " styleClass="usernameLabel" GridPane.rowIndex="2" GridPane.columnIndex="0"/>
 
-                <Label fx:id="score1" text=" " styleClass="usernameLabel" GridPane.rowIndex="0" GridPane.columnIndex="1" onKeyPressed="#updateHighScores"/>
-                <Label fx:id="score2" text=" " styleClass="usernameLabel" GridPane.rowIndex="1" GridPane.columnIndex="1" onKeyPressed="#updateHighScores"/>
-                <Label fx:id="score3" text=" " styleClass="usernameLabel" GridPane.rowIndex="2" GridPane.columnIndex="1" onKeyPressed="#updateHighScores"/>
+                <Label fx:id="score1" text=" " styleClass="usernameLabel" GridPane.rowIndex="0" GridPane.columnIndex="1" onKeyPressed="#updateSocial"/>
+                <Label fx:id="score2" text=" " styleClass="usernameLabel" GridPane.rowIndex="1" GridPane.columnIndex="1" onKeyPressed="#updateSocial"/>
+                <Label fx:id="score3" text=" " styleClass="usernameLabel" GridPane.rowIndex="2" GridPane.columnIndex="1" onKeyPressed="#updateSocial"/>
             </GridPane>
         </GridPane>
     </center>
