--- a/res/network_fxml/styles/identitystyle.css
+++ b/res/network_fxml/styles/identitystyle.css
@@ -14,6 +14,7 @@
     -fx-text-fill: ghostwhite;
     -fx-font-size: 18;
     -fx-translate-y: -60;
+    -fx-font-family: "Sofia Pro";
 }
 
 .innerGridPane{
