Added the outline for create account GUI TODO: link to backend web requests for google app engine account data

--- a/res/network_fxml/identitypane.fxml
+++ b/res/network_fxml/identitypane.fxml
@@ -40,6 +40,6 @@
         </GridPane>
     </center>
     <stylesheets>
-        <URL value="@styles/identitystyle.css" />
+        <URL value="@styles/networkstyle.css" />
     </stylesheets>
 </BorderPane>
