--- a/res/network_fxml/styles/networkstyle.css
+++ b/res/network_fxml/styles/networkstyle.css
@@ -1,3 +1,37 @@
+.borderPane{
+    -fx-background-color: grey;
+    -fx-padding: 30;
+    -fx-spacing: 30;
+}
+
+.button{
+    -fx-pref-width: 100;
+    -fx-pref-heigh: 20;
+    -fx-background-color: GHOSTWHITE;
+    -fx-text-fill: black;
+    -fx-background-radius: 20 20 20 20;
+    -fx-font-family: Bebaskai;
+    -fx-effect: dropshadow( gaussian , GHOSTWHITE , 0,0,0,2 );
+}
+
+.errorLabel{
+    -fx-font-size: 18;
+    -fx-text-fill: red;
+    -fx-font-style: italic;
+}
+
+.gridPane{
+    -fx-background-color: #333333;
+    -fx-background-radius: 18 18 18 18;
+}
+
+.prompt{
+    -fx-text-fill: white;
+    -fx-font-family: Bebaskai;
+    -fx-font-size: 20;
+    -fx-fill: white;
+}
+
 .textfieldLabel {
     -fx-font-size: 20;
     -fx-font-family: Bebaskai;
@@ -14,43 +48,8 @@
     -fx-effect: none;
 }
 
-.gridPane{
-    -fx-background-color: #333333;
-    -fx-background-radius: 18 18 18 18;
-}
-
-.button{
-    -fx-pref-width: 100;
-    -fx-pref-heigh: 20;
-    -fx-background-color: GHOSTWHITE;
-    -fx-text-fill: black;
-    -fx-background-radius: 20 20 20 20;
-    -fx-font-family: Bebaskai;
-    -fx-effect: dropshadow( gaussian , GHOSTWHITE , 0,0,0,2 );
-}
-
-
-.welcomeLabel{
+.titleLabel{
     -fx-text-fill: white;
     -fx-font-family: Bebaskai;
     -fx-font-size: 32;
-}
-
-.prompt{
-    -fx-text-fill: white;
-    -fx-font-family: Bebaskai;
-    -fx-font-size: 20;
-    -fx-fill: white;
-}
-
-.borderPane{
-    -fx-background-color: grey;
-    -fx-padding: 30;
-    -fx-spacing: 30;
-}
-
-.errorLabel{
-    -fx-font-size: 18;
-    -fx-text-fill: red;
-    -fx-font-style: italic;
 }
