--- a/res/gameCenter/GameCenter.css
+++ b/res/gameCenter/GameCenter.css
@@ -13,11 +13,13 @@
 .paneText {
     -fx-fill: #DDDDDD;
     -fx-font-size: 25;
+    -fx-font-family: "Bebas Kai";
 }
 
 .descText {
     -fx-fill: #DDDDDD;
     -fx-font-size: 15;
+    -fx-font-family: "Sofia Pro";
 }
 
 .permaPane {
@@ -75,17 +77,12 @@
     -fx-background-radius: 15 15 0 0;
 }
 
-.canvas {
-    -fx-background-color: #ffffff;
-    -fx-border-radius: 5 5 5 5;
-    -fx-background-radius: 5 5 5 5;
-}
-
 .button {
     -fx-background-color: ghostwhite;
     -fx-text-alignment: center;
     -fx-text-fill: #333333;
     -fx-font-size: 20;
+    -fx-font-family: "Bebas Kai";
     -fx-effect: dropshadow(three-pass-box, lightgray, 10, 0, 0, 0);
     -fx-background-radius: 20 20 20 20;
     -fx-cursor: hand;
