--- a/classes/production/voogasalad_crackingopen/GUI/GUIStyle.css
+++ b/classes/production/voogasalad_crackingopen/GUI/GUIStyle.css
@@ -12,7 +12,8 @@
 
 .paneText {
     -fx-fill: #DDDDDD;
-    -fx-font-size: 25;
+    -fx-font-family: Impact;
+    -fx-font-size: 24;
 }
 
 .descText {
@@ -75,18 +76,18 @@
     -fx-background-radius: 15 15 0 0;
 }
 
-.canvas {
-    -fx-background-color: #ffffff;
-    -fx-border-radius: 5 5 5 5;
-    -fx-background-radius: 5 5 5 5;
-}
-
-.button {
+.largeButton {
     -fx-background-color: ghostwhite;
-    -fx-text-alignment: center;
-    -fx-text-fill: #333333;
-    -fx-font-size: 20;
+    -fx-font-family: Impact;
+    -fx-font-size: 24;
     -fx-effect: dropshadow(three-pass-box, lightgray, 10, 0, 0, 0);
     -fx-background-radius: 20 20 20 20;
     -fx-cursor: hand;
+}
+
+.smallButton {
+    -fx-background-color: ghostwhite;
+    -fx-font-family: Impact;
+    -fx-font-size: 16;
+    -fx-background-radius: 20 20 20 20;
 }
