--- a/classes/production/voogasalad_crackingopen/GUI/GameCenter.fxml
+++ b/classes/production/voogasalad_crackingopen/GUI/GameCenter.fxml
@@ -15,11 +15,11 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane id="parentPane" prefHeight="525.0" prefWidth="983.0" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="gameCenter.main.GameCenterController">
+<AnchorPane id="parentPane" prefHeight="525.0" prefWidth="975.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GameCenter.main.GameCenterController">
 
     <padding><Insets bottom="25" left="25" right="25" top="25" /></padding>
 
-    <stylesheets><URL value="@GameCenter.css" /></stylesheets>
+    <stylesheets><URL value="@GUIStyle.css" /></stylesheets>
 
     <!-- Thumbnail Pane -->
     <Pane layoutX="700" layoutY="25" prefHeight="450" prefWidth="250" styleClass="centerPane">
@@ -68,7 +68,10 @@
       <children>
           <Pane fx:id="newGamePane" prefHeight="390" prefWidth="425" styleClass="centerPane">
             <children>
-                 <Button fx:id="newGameButton" layoutX="114.0" layoutY="173.0" onAction="#launchAuthEnv" styleClass="button" text="Create a new game" />
+                 <Button fx:id="newGameButton" layoutX="103.0" layoutY="173.0" onAction="#launchAuthEnv" text="Create a new game">
+                  <font>
+                     <Font name="Impact" size="24.0" />
+                  </font></Button>
             </children>
           </Pane>
          <Pane fx:id="descriptionPane" prefHeight="200.0" prefWidth="200.0" styleClass="descriptionPane" visible="false">
