#49 created a Plotter that uses PlotBuilder and X and Y Axis Selectors. Moved old player stage methods into this plotter class. Updated HUD to include a plotter

--- a/res/hud.css
+++ b/res/hud.css
@@ -3,16 +3,12 @@
     -fx-text-fill: white;
 }
 
-#hud-title {
+#hud-title.label {
     -fx-font-size: 40;
 }
 
-.data-label {
+.data-label.label {
     -fx-font-size: 20;
-}
-
-.vbox {
-
 }
 
 .scroll-pane {
