--- a/classes/production/voogasalad_crackingopen/GUI/Launcher.fxml
+++ b/classes/production/voogasalad_crackingopen/GUI/Launcher.fxml
@@ -15,12 +15,12 @@
    <children>
       <Pane layoutX="263.0" layoutY="63.0" prefHeight="400.0" prefWidth="450.0" styleClass="centerPane">
          <children>
-            <TextField layoutX="50.0" layoutY="100.0" prefHeight="25.0" prefWidth="350.0" promptText="USERNAME">
+            <TextField fx:id="username" layoutX="50.0" layoutY="100.0" prefHeight="25.0" prefWidth="350.0" promptText="USERNAME">
                <font>
                   <Font name="Impact" size="16.0" />
                </font>
             </TextField>
-            <PasswordField layoutX="50.0" layoutY="150.0" prefHeight="24.0" prefWidth="350.0" promptText="PASSWORD">
+            <PasswordField fx:id="password" layoutX="50.0" layoutY="150.0" prefHeight="24.0" prefWidth="350.0" promptText="PASSWORD">
                <font>
                   <Font name="Impact" size="16.0" />
                </font>
@@ -36,9 +36,11 @@
                </font>
             </TextField>
             <Text layoutX="50.0" layoutY="80.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="paneText" text="SIGN IN" />
-            <Button fx:id="createAccountButton" layoutX="269.0" layoutY="200.0" mnemonicParsing="false" onAction="#createAccount" styleClass="smallButton" text="CREATE ACCOUNT" />
-            <Button fx:id="forgotPasswordButton" layoutX="50.0" layoutY="200.0" mnemonicParsing="false" styleClass="smallButton" text="FORGOT PASSWORD?" />
-            <Button fx:id="goBackButton" layoutX="50.0" layoutY="300.0" mnemonicParsing="false" styleClass="smallButton" onAction="#goBack" text="GO BACK" visible="false" />
+            <Button fx:id="createAccountButton" layoutX="266.0" layoutY="50.0" mnemonicParsing="false" onAction="#createAccount" styleClass="smallButton" text="CREATE ACCOUNT" />
+            <Button fx:id="forgotPasswordButton" layoutX="50.0" layoutY="200.0" mnemonicParsing="false" styleClass="smallButton" text="FORGOT PASSWORD" />
+            <Button fx:id="goBackButton" layoutX="50.0" layoutY="300.0" mnemonicParsing="false" onAction="#goBack" styleClass="smallButton" text="GO BACK" visible="false" />
+            <Button fx:id="loginButton" layoutX="341.0" layoutY="200.0" mnemonicParsing="false" onAction="#login" styleClass="smallButton" text="LOG IN" />
+            <Button fx:id="createButton" layoutX="331.0" layoutY="300.0" mnemonicParsing="false" onAction="#create" styleClass="smallButton" text="CREATE" visible="false" />
          </children>
       </Pane>
    </children>
