--- a/res/GUI/GUIStyle.css
+++ b/res/GUI/GUIStyle.css
@@ -91,3 +91,11 @@
     -fx-font-size: 16;
     -fx-background-radius: 20 20 20 20;
 }
+
+.smallButton:pressed{
+    -fx-effect: dropshadow(three-pass-box, lightgray, 10, 0, 0, 0);
+}
+
+.smallButton:hover{
+    -fx-background-color: #d3d3da;
+}
